syntax = "proto3";

package worker;

option go_package = "github.com/arybolovlev/orkestrator/proto/worker";

message RegisterWorkerRequest {
    string name = 1;
}
message RegisterWorkerResponse {
    string id = 1;
    string name = 2;
}

message UnsubscribeRequest {}
message UnsubscribeResponse {}

message StatusRequest {}
message StatusResponse {}

service Worker {
    rpc RegisterWorker(RegisterWorkerRequest) returns (RegisterWorkerResponse);
    rpc UnregisterWorker(UnsubscribeRequest) returns (UnsubscribeResponse);
    rpc Status(StatusRequest) returns (StatusResponse);
}
